examples/negative/derive/derive_show_no_field_show.kai
# Negative fixture (#511 / derive contract): `#derive(Show)` on
# `Pixel` requires every field's type to have a Show impl. The
# `Color` record has none — the derive validator must reject at
# expansion time, NOT wait for a runtime dispatch failure.

type Color = { r: Int, g: Int, b: Int }

#[derive(Show)]
type Pixel = { id: Int, color: Color }

fn main() : Int = 0
